added form submit function

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <form>
+  <form onsubmit="addToCart(event)">
     <h2 class="section-title">Bundle and saves</h2>
 
     <div class="bundle">
